add README, test with mockwebserver and some refactor;